Fixed startup parameters for companion app