@@ -198,6 +198,7 @@ public class CompanionApp {
         try {
             ProcessBuilder processBuilder = new ProcessBuilder(
                     this.appDir.resolve("bin").resolve("java.exe").toAbsolutePath().toString(),
+                    "--illegal-access=permit",
                     "-jar",
                     exePath.toAbsolutePath().toString(),
                     "\"" + this.appDir.getParent().resolve(DecompilationManager.DECOMPILED_FILES_FOLDER).toAbsolutePath() + "\""
